--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>kekayan's Resume</title>
+    <title>Deep Patel Resume</title>
 </head>
 
 <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/deepsworld/resume/raw/master/DeepPatelResume.pdf &embedded=true" style="width:100%; height:100%;"
+    <iframe src="https://docs.google.com/gview?url= https://github.com/deepsworld/Resume/raw/master/DeepPatelResume.pdf&embedded=true" style="width:100%; height:100%;"
         frameborder="0"></iframe>
 </body>
 
