--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body style="width:100%; height:100%; margin:0;">
-	<iframe src="https://docs.google.com/viewer?url=https://github.com/deepsworld/Resume/raw/master/DeepPatelResume.pdf&embedded=true" style="width:100%; height:100%;"
-        frameborder="0"></iframe>
-    <p>Download my resume <a href="https://github.com/deepsworld/Resume/raw/master/DeepPatelResume.pdf">Resume</a>.</p>
+	<iframe src="https://docs.google.com/viewer?url=https://github.com/deepsworld/Resume/raw/master/DeepPatelResume.pdf&embedded=true"
+	style="width:100%; height:100%;"
+    frameborder="0"></iframe>
 </body>
 
 </html>
